# src/app.js
@@ -11,6 +11,7 @@ import { publicDirectory } from "./configs/storage.js";
 import { errorHandler } from "./middlewares/errorHandler.js";
 import { notFoundHandler } from "./middlewares/notFoundHandler.js";
 import bouquetsRouter from "./routes/bouquetsRouter.js";
+import feedbacksRouter from "./routes/feedbacksRouter.js";
 
 const app = express();
 
@@ -32,6 +33,7 @@ app.use(
 );
 
 app.use("/api/bouquets", bouquetsRouter);
+app.use("/api/feedbacks", feedbacksRouter);
 
 app.use(notFoundHandler);
 app.use(errorHandler);
