# src/models/Feedback.js
@@ -1,0 +1,36 @@
+import { DataTypes } from "sequelize";
+
+import { sequelize } from "../configs/database.js";
+
+export const Feedback = sequelize.define(
+  "Feedback",
+  {
+    id: {
+      type: DataTypes.INTEGER,
+      autoIncrement: true,
+      primaryKey: true,
+    },
+
+    author: {
+      type: DataTypes.STRING(100),
+      allowNull: false,
+      validate: {
+        notEmpty: true,
+        len: [2, 100],
+      },
+    },
+
+    text: {
+      type: DataTypes.TEXT,
+      allowNull: false,
+      validate: {
+        notEmpty: true,
+        len: [5, 1000],
+      },
+    },
+  },
+  {
+    tableName: "feedbacks",
+    timestamps: false,
+  },
+);
